# latero

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  INSTALL  README  latero.pc.cmake
cmake/: lateroConfig.cmake.in
latero/: CMakeLists.txt  buttondebouncer.h  point.h  tactiledisplay.cpp  tactiledisplay.h  tactileimg.h  tactograph.cpp  tactograph.h
latero/tl-latero/: latero.c  latero.h  latero_io.c  latero_io.h
